# aspen-backend

./: .dockerignore  Dockerfile  README.md  alembic.ini  context.md  docker-compose.yml  epic0.md  epic1.md  epic10.md  epic11.md  epic2.md  epic3.md  epic4.md  epic5-node-service-metadata.md  epic5.md  epic6.md  epic7.md  epic8.md  epic9.md  frontent-usage.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 010b112a5fb0_create_services_tables.py  2bb7a25865d5_add_api_key_hash_index.py  49cd9cf8279f_create_workflows_tables.py  5ff515659d9d_create_users_tables.py  69bae4225f45_create_workflow_services_table.py  836a4ab0e5a9_add_branch_label_to_node_nodes.py  9219d56a01d0_create_team_member_tables.py  f325429fbc54_create_experts_tables.py
app/: database.py  main.py
app/api/: auth.py  chat.py  deps.py  experts.py  services.py  workflows.py
app/lib/: cron.py  jsonata.py
app/mappers/: experts.py
app/middleware/: ratelimit.py
app/models/: common.py  experts.py  services.py  team.py  users.py  workflow_services.py  workflows.py
app/repos/: __init__.py  experts_repo.py  services_repo.py  teams_repo.py  users_repo.py  workflows_repo.py
app/schemas/: experts.py  services.py  workflows.py
app/security/: apikeys.py  guardrails.py  jwt.py  passwords.py  permissions.py
docs/: migrations.md
scripts/: seed_dev.py
tests/: conftest.py  test_common.py  test_conftest.py  test_experts.py  test_migrations.py  test_repos.py  test_services.py  test_team.py  test_users.py  test_workflow_services.py  test_workflows.py
(+60 files in other folders)
