[tool.poetry]
name = "aspen-backend"
version = "0.1.0"
description = "Multi-tenant AI workflow platform"
authors = ["Joseph Dodge <34195877+josephdodge8141@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlmodel = "^0.0.22"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.10.0"}
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = "^2.10.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"
jsonata-python = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check ."
format = "black ."
type-check = "mypy ."
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
